--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -4,10 +4,10 @@ logging.level.org.springframework.web: ERROR
 logging.level.org.hibernate: ERROR
 logging.level.com.lifeix.bz.common: ERROR
 ##Mongo
-spring.data.mongodb.uri=mongodb://root:Lifeix2016@dds-2zec432c225e7d941.mongodb.rds.aliyuncs.com:3717,dds-2zec432c225e7d942.mongodb.rds.aliyuncs.com:3717/admin?replicaSet=mgset-2684817
+spring.data.mongodb.uri=mongodb
 ##Redis
-spring.redis.host=r-2ze778fba049f674.redis.rds.aliyuncs.com
-spring.redis.password=Lifeix2016
+spring.redis.host=redis
+spring.redis.password=Lifeix
 ##comment
 comment.userhost=lifeix-bz-user
 comment.userport=8080
