测试环境加入redis

--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -1,7 +1,8 @@
 ##Mongo
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
-
+##Redis
+spring.redis.host=redis
 ##comment
 comment.userhost=lifeix-bz-user
 comment.userport=8080
