加入测试用例，规范po命名

--- a/src/main/resources/application-common.properties
+++ b/src/main/resources/application-common.properties
@@ -1,7 +1,7 @@
 spring.application.name=football-services
 server.context-path=/
 #Mongodb
-spring.data.mongodb.database=services
+spring.data.mongodb.database=bz-common
 #Cache
 spring.cache.type=redis
 #Redis
